# thesisAutonomous_ws

./: .cproject  .mxproject  .project  README.md  thesisAutonomousRobot.ioc  thesisAutonomousRobot.launch  thesisAutonomous_ws.workspace.user.22
Core/Inc/: stm32f4xx_it.h  tim.h
Core/Src/: gpio.c  main.c  main.cpp  stm32f4xx_it.c  tim.c  usart.c
HardwareControl/Actuator/: Motor.c  Motor.h
HardwareControl/Algorithm/Madgwick/: Madgwick.c  Madgwick.h
HardwareControl/Algorithm/PID/: PID.c  PID.h
HardwareControl/HardwareInfo/: HardwareInfo.c  HardwareInfo.h
HardwareControl/Peripheral/: ImuPeripheral.c  MotorPeripheral.c  Peripheral.h  UartPeripheral.c
HardwareControl/Sensor/AK8963/: ak8963.c  ak8963.h
HardwareControl/Sensor/Encoder/: Encoder.c  Encoder.h
HardwareControl/Sensor/MPU9250/: mpu9250.c  mpu9250.h
HardwareControl/Uart/GUI/: Gui.c  Gui.h
HardwareControl/Uart/MATLAB/: Matlab.c  Matlab.h
HardwareControl/inc/: HardwareInfo.h
HardwareControl/src/: HardwareInfo.c
Portable/mcu_port/: err_code.h
WS_CAMERA_QR/: amcl_node.py  test.py  test_camera_1.py  test_camera_2.py  test_camera_3.py  test_camera_4.py
mcuLib/inc/: compilerSwitch.h  errorCode.h
ros_stm32_base_control/: BaseControl.c  BaseControl.h
ros_stm32_base_control/inc/: BaseControl.h  BaseControlPrivate.h
ros_stm32_base_control/src/: BaseControl.c  BaseControlPrivate.cpp
roslib/include/: SerialClass.h
src/robot/: amcl_node.py  package.xml  qr_code_ros_publish.py
src/robot/robot_bringup/: package.xml
src/robot/robot_bringup/launch/: robot.launch  robot_rosserial.launch
src/robot/robot_update/: CMakeLists.txt  package.xml
src/robot/robot_update/include/robot_update/: OTA_update.h
src/robot/robot_update/nodes/: OTA_update.cpp
src/robot/robot_update/srv/: updateFWSignal.srv
src/robot_gui/: CMakeLists.txt  package.xml
src/robot_gui/include/robot_gui/: compiler_switch.h  loadingdialog.h  loadingdialog.ui  robot_gui.h  robot_gui.ui  updatefwloading.h  updatefwloading.ui
src/robot_gui/launch/: robot_gui.launch
src/robot_gui/nodes/: robot_gui_node.cpp
src/robot_gui/resource/: resource.qrc
src/robot_gui/src/: loadingdialog.cpp  robot_gui.cpp  updatefwloading.cpp
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/AStarResult/: BreadToCheckoutCounter.json  BreadToCooker.json  BreadToFruit.json  BreadToGas.json  BreadToMicrowaveOven.json  BreadToOil.json  BreadToRefrigerator.json  BreadToSalt.json  BreadToSnack.json  BreadToSoftDrink.json  BreadToStart.json  BreadToSugar.json  BreadToTelevision.json  BreadToWater.json  CheckoutCounterToBread.json  CheckoutCounterToCooker.json  CheckoutCounterToFruit.json  CheckoutCounterToGas.json  CheckoutCounterToMicrowaveOven.json  CheckoutCounterToOil.json  CheckoutCounterToRefrigerator.json  CheckoutCounterToSalt.json  CheckoutCounterToSnack.json  CheckoutCounterToSoftDrink.json  CheckoutCounterToStart.json  CheckoutCounterToSugar.json  CheckoutCounterToTelevision.json  CheckoutCounterToWater.json  CookerToBread.json  CookerToCheckoutCounter.json  CookerToFruit.json  CookerToGas.json  CookerToMicrowaveOven.json  CookerToOil.json  CookerToRefrigerator.json  CookerToSalt.json  CookerToSnack.json  CookerToSoftDrink.json  CookerToStart.json  CookerToSugar.json  (+170 more)
src/robot_navigation/ProductPose/: Bread.json  CheckoutCounter.json  Cooker.json  Fruit.json  Gas.json  MicrowaveOven.json  Oil.json  Refrigerator.json  Salt.json  Snack.json  SoftDrink.json  Start.json  Sugar.json  Television.json  Water.json
src/robot_navigation/ProductPoseReal/: Bread.json  Cooker.json  Fruit.json  Gas.json  MicrowaveOven.json  Oil.json  Refrigerator.json  Salt.json  Snack.json  SoftDrink.json  Sugar.json  Television.json  Water.json
src/robot_navigation/config/: HybridPlanner.cfg  dwa_param.yaml
src/robot_navigation/include/robot_navigation/: A_star.hpp  DWA.hpp  Finding_path.h  GA.hpp
src/robot_navigation/include/robot_navigation/hybrid_local_planner/: hybrid_planner_ros.h
src/robot_navigation/launch/: local_planner.launch  move_base.launch  robot_navigation.launch  testAlgorithm.rviz  test_local_planner.launch  turtlebot3_bookstore.launch  turtlebot3_navigation.launch
src/robot_navigation/map/: turtlebot3_navigation.rviz
src/robot_navigation/nodes/: A_star.cpp  DWA.cpp  Finding_path.cpp  Local_parameter.cpp  Move_base.cpp  Move_base_intergrate.cpp  Optimize_Path.cpp  hybrid_planner_ros.cpp
src/robot_navigation/param/: hybrid_local_planner_params.yaml  local_costmap_params.yaml
src/robot_navigation/rviz/: GA_AStar_DWA.rviz  GA_AStar_Hybrid.rviz  robot_navigation.rviz  testAlgorithm.rviz
src/robot_navigation/src/: AStar_Node.cpp  A_star.cpp  DWA.cpp  Edge.cpp  Finding_localPath.cpp  Finding_path.cpp  GA.cpp  Helper.cpp  Local_parameter.cpp  Node.cpp  hybrid_planner.cpp
src/robot_navigation/srv/: GARequest.srv  ReplanPath.srv
src/robot_serial/: CMakeLists.txt  package.xml
src/robot_serial/include/robot_serial/: serialRosSTM.h
src/robot_serial/nodes/: serialNode.cpp
src/robot_serial/src/: serialRosSTM.cpp
src/robot_simulate/: CMakeLists.txt  package.xml
src/robot_web/: CMakeLists.txt  package.xml
src/robot_web/launch/: robot_web.launch
src/robot_web/scripts/: start_http_server.sh
src/robot_web/web/: index.html
